--- a/src/css/technology-list.css
+++ b/src/css/technology-list.css
@@ -18,7 +18,7 @@ path {
 
 .tech-svg {
     padding: 40px;
-    min-width: 200px;
+    min-width: 175px;
 }
 
 
